<resources>
    <string name="app_name">QR hunt</string>
    <string name="UserName">User Name:</string>
    <string name="Contact_info">Contact info:</string>
    <string name="todo">TODO</string>
    <string name="User_Score">User Score:</string>
    <string name="Code_List">CodeList</string>
    <string name="Remove">Remove</string>
    <string name="remove_or_not">Are you sure you want to delete this user?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>